# autoinfer

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
docs/: runbook-iteration-zero.md
docs/research/campaigns/: 01-l1xl2xl3-vllm-2026-04-26.md  02-paired-control-feasibility-2026-04-26.md  02-paired-control-feasibility-2026-04-27.md  03-h100-replication-2026-04-27.md  TEMPLATE.md
docs/research/notes/: c04-l1-autotune-comparable-recon.md  t-21-attention-injector-recon.md
docs/research/raw/: 00-alexandria-coverage.md  01-sglang.md  02-covenant-pulse.md  03-autokernel.md  04-karpathy-style-minimal-inference.md  05-smc-speculative-decoding.md  06-cloudflare-omni-gpu-multiplexing.md  07-vllm-v1-architecture.md  08-vllm-router-dataplane.md  (+5 more)
examples/qwen3-8b-l1-l2-joint/: config.yaml
examples/qwen3-8b-l1-l2-l3-joint/: config.yaml
examples/qwen3-8b-l1-slice/: config.yaml  program.md
examples/qwen3-8b-l1-slice-llm/: config.yaml
examples/qwen3-8b-l2-topology/: config.yaml
scripts/: analyze_run.py  campaign_runner.py  canary_config.yaml  fetch_sharegpt.py  launch_joint_campaign.sh  orchestrate_iteration_zero.py  smoke_run.sh  start_reference.sh
src/autoinfer/: builder.py  cli.py  config.py
tests/: test_analyze_run.py  test_basilica_spec.py  test_builder_calibration.py  test_builder_joint.py  test_cli.py  test_config.py  test_constrained_surrogate.py  test_controller_continuous.py  test_controller_stale.py  test_driver.py  test_failure.py  test_feasibility.py  test_fidelity.py  test_gate.py  test_l1_adapter.py  test_l1_surface.py  test_l2_adapter.py  test_l2_surface.py  test_l3_adapter.py  test_l3_baselines.py  test_l3_injector.py  test_l3_proposer.py  test_l3_surface.py  test_ledger.py  test_llm_providers.py  test_sham.py  test_surrogate.py  test_telemetry_summary.py  test_warmstart.py
(+377 files in other folders)
