[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoinfer"
version = "0.1.0"
description = "Three-layer search over LLM inference: engine config, hardware topology, kernel."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "numpy>=1.24",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
  "typing-extensions>=4.9",
]

[project.scripts]
autoinfer = "autoinfer.cli:app"

[project.optional-dependencies]
basilica = ["basilica-sdk>=0.20"]
policy = ["optuna>=3.5"]
vllm = ["vllm>=0.7"]
llm = ["anthropic>=0.50"]
l3 = ["torch>=2.1"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
  "types-pyyaml>=6.0",
  "optuna>=3.5",
  "torch>=2.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
  "integration: tests that hit external services (deselect with -m 'not integration')",
  "basilica: tests that need Basilica credentials",
  "gpu: tests that need a GPU (deselect with -m 'not gpu')",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["basilica", "basilica.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

[tool.setuptools.package-data]
autoinfer = ["py.typed", "layers/l1_engine/*.yaml", "layers/l2_topology/*.yaml", "layers/l3_kernel/*.yaml"]
